--- a/clientedunamis/src/Css/PagoSalarios.styles.css
+++ b/clientedunamis/src/Css/PagoSalarios.styles.css
@@ -24,7 +24,7 @@
 }
 
 .pago-salarios-title {
-    color: #484550;
+    color: #494747;
     font-size: 24px;
     margin-bottom: 20px;
     margin-top: 0;
@@ -40,8 +40,8 @@
 .search-bar {
     flex: 1;
     padding: 0.75rem;
-    border: 1px solid #476067;
-    border-radius: 5px 0 0 5px; /* Redondeo de los bordes izquierdos */
+    border: 1px solid #484550;
+    border-radius: 5px 0 0 5px; 
     background-color: rgba(255, 255, 255, 0.7);
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
@@ -53,13 +53,15 @@
 }
 
 .search-button {
-    border-radius: 0 5px 5px 0; /* Redondeo de los bordes derechos */
+    border-radius: 0 5px 5px 0;
     background-color: #33baab;
     border-color: #33baab;
     color: #ffffff;
     font-weight: bold;
     transition: background-color 0.3s ease, border-color 0.3s ease;
-    margin-left: -1px; /* Ajuste para eliminar el espacio entre la barra de búsqueda y el botón */
+    margin-left: -1px; 
+    width: 50px;
+    height: 40px;
 }
 
 .search-button:hover {
@@ -75,22 +77,20 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+    background-color: white;
 }
 
 .employee-table th, .employee-table td {
     padding: 15px;
     border: 1px solid #ccc;
     text-align: center;
+    background-color: white;
 }
 
 .employee-table th {
-    background-color: #476067;
+    background-color: #4f6970;
     color: #fff;
     font-weight: bold;
-}
-
-.employee-table td {
-    background-color: #e0f7fa;
 }
 
 .pay-button {
