--- a/clientedunamis/src/Css/AgregarTrabajosExtras.styles.css
+++ b/clientedunamis/src/Css/AgregarTrabajosExtras.styles.css
@@ -67,6 +67,7 @@ h2.custom-h2 {
     justify-content: center;
     gap: 1em;
     margin-top: 1em;
+    flex-wrap: wrap;
 }
 
 .btn-Agregar{
@@ -88,4 +89,47 @@ h2.custom-h2 {
 
 .btn-cancelar .p-button:hover {
     background-color: #434646; 
+}
+.btn-Agregar,
+.btn-cancelar {
+    margin-top: 4%;
+    flex: 1 1 auto; 
+    min-width: 120px; 
+    max-width: 200px; 
+}
+
+.btn-Agregar .p-button,
+.btn-cancelar .p-button {
+    width: 100%;
+    padding: 0.5em 1em;
+    font-size: 1rem;
+}
+
+
+@media screen and (max-width: 600px) {
+    .btn-Agregar,
+    .btn-cancelar {
+        width: 100%; 
+        max-width: none;
+    }
+
+    .p-field.p-grid {
+        flex-direction: column;
+        align-items: stretch;
+    }
+}
+
+
+@media screen and (max-width: 400px) {
+    .agregar-trabajos-extras-card {
+        padding: 1em;
+    }
+
+    .p-field {
+        margin-bottom: 1em;
+    }
+
+    .agregar-trabajos-extras-card h2 {
+        font-size: 1.5em;
+    }
 }
